# opengl_learning

./: .gitignore  README.md
camera/: meson.build  run.sh
camera/src/: exercise.cpp
camera2/src/: exercise.cpp
camera3/src/: exercise.cpp  meson.build
coordinate_systems/src/: exercise.cpp
examples/: meson.build
examples/src/: meson.build
glad/src/: glad.c
hello_world/glad/include/glad/: glad.h
hello_world/src/: example1.cpp  meson.build
shaders/src/: exercise.cpp
textures/src/: exercise.cpp  meson.build
transformations/: meson.build
transformations/src/: exercise.cpp
triangle_exrcse1/: meson.build  run.sh
triangle_exrcse1/src/: exercise.cpp  meson.build
triangle_exrcse2/src/: exercise.cpp
triangle_exrcse3/: run.sh
triangle_exrcse3/src/: exercise.cpp
